Added hasChannel to client